hphp/hack/test/ifc/check/as.php.exp
=== IFC analysis results for as.php
File "as.php", line 24, characters 5-22:
Data with policy `PRIVATE` appears in context `PUBLIC`. (Typing[4379])
  File "as.php", line 8, characters 15-26:
  This may be the data source with policy `PRIVATE`
  File "as.php", line 5, characters 15-25:
  This may be the data sink with policy `PUBLIC`
  File "as.php", line 17, characters 5-12:
  Another program point contributing to the illegal flow
  File "as.php", line 22, characters 5-12:
  Another program point contributing to the illegal flow
File "as.php", line 49, characters 3-27:
Data with policy `PRIVATE` appears in context `PUBLIC`. (Typing[4379])
  File "as.php", line 8, characters 15-26:
  This may be the data source with policy `PRIVATE`
  File "as.php", line 5, characters 15-25:
  This may be the data sink with policy `PUBLIC`
  File "as.php", line 45, characters 5-12:
  Another program point contributing to the illegal flow
